Se renombra objetivo

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Configuración Jekyll para Nereida Joyas
 title: Nereida Joyas
-description: Joyería masculina exclusiva en Uruguay. Anillos, cadenas y pulseras de alta calidad con diseños únicos.
+description: Joyería femenina exclusiva en Uruguay. Anillos, cadenas y pulseras de alta calidad con diseños únicos.
 url: https://nereidajoyas.uy
 baseurl: ""
 
