--- a/_data/empresa.yml
+++ b/_data/empresa.yml
@@ -1,6 +1,6 @@
 # Datos de la empresa para Schema.org LocalBusiness
 nombre: "Nereida Joyas"
-descripcion: "Joyería masculina exclusiva especializada en diseños únicos inspirados en culturas antiguas. Anillos, cadenas y pulseras de alta calidad en Uruguay."
+descripcion: "Joyería femenina exclusiva especializada en diseños únicos inspirados en culturas antiguas. Anillos, cadenas y pulseras de alta calidad en Uruguay."
 telefono: "+598XXXXXXXXX"
 email: "contacto@nereidajoyas.uy"
 url: "https://nereidajoyas.uy"
