Se actualiza estética

--- a/_data/productos.yml
+++ b/_data/productos.yml
@@ -5,8 +5,8 @@ anillos:
   - id: anillo-itaca
     nombre: "Anillo \"Ítaca\""
     slug: "anillo-plata-itaca"
-    descripcion: "Una reinterpretación femenina y grácil de la arquitectura clásica. Este anillo de plata 925 presenta una banda delgada y sutilmente cóncava, que se siente ligera en el dedo. La prominente arista central del diseño anterior se ha refinado hasta convertirse en un filo hilo de plata pulida a espejo, que atrapa la luz como una línea brillante. Los laterales curvos ahora muestran un acabado satinado sedoso y muy fino, mucho más suave que el cepillado anterior. Es una pieza arquitectónica, pero con la delicadeza de una columna jónica."
-    precio: 8500
+    descripcion: "Una reinterpretación femenina y grácil de la arquitectura clásica. Este anillo de plata 925 presenta una banda delgada y sutilmente cóncava, que se siente ligera en el dedo. La prominente arista central del diseño anterior se ha refinado hasta convertirse en un filo hilo de plata pulida a espejo, que atrapa la luz como una línea brillante. Es una pieza arquitectónica, pero con la delicadeza de una columna jónica."
+    precio: 5500
     imagen: "/assets/images/products/itaca_macro.png"
     categoria: "anillos"
     stock: true
@@ -15,8 +15,8 @@ anillos:
   - id: anillo-cimodocea
     nombre: "Anillo \"Cimodocea\""
     slug: "anillo-plata-cimodocea"
-    descripcion: "Inspirado en Cimodocea, la nereida conocida por calmar las olas, este anillo es una interpretación arquitectónica de la fluidez acuática. Se trata de una pieza escultórica y maciza en plata 925, donde una banda ancha se retuerce en un movimiento orgánico pero controlado, como una ola detenida en el tiempo. La pieza juega con el contraste entre superficies pulidas a espejo que evocan el agua quieta, y profundidades en plata cepillada mate que sugieren la fuerza de las corrientes submarinas. Sobrio, pesado y sofisticado."
-    precio: 6200
+    descripcion: "Inspirado en Cimodocea, la nereida conocida por calmar las olas, este anillo es una interpretación arquitectónica de la fluidez acuática. Se trata de una pieza escultórica y maciza en plata 925, donde una banda ancha se retuerce en un movimiento orgánico pero controlado, como una ola detenida en el tiempo. La pieza juega con el contraste entre superficies pulidas a espejo que evocan el agua quieta, y profundidades en plata cepillada mate que sugieren la fuerza de las corrientes submarinas."
+    precio: 8500
     imagen: "/assets/images/products/cimodocea_macro.png"
     categoria: "anillos"
     stock: true
