Se mejora estética

--- a/_data/empresa.yml
+++ b/_data/empresa.yml
@@ -2,7 +2,7 @@
 nombre: "Nereida Joyas"
 descripcion: "Joyería femenina exclusiva especializada en diseños únicos inspirados en culturas antiguas. Anillos, cadenas y pulseras de alta calidad en Uruguay."
 telefono: "+598XXXXXXXXX"
-email: "contacto@nereidajoyas.uy"
+email: "info@nereidajoyas.uy"
 url: "https://nereidajoyas.uy"
 logo: "https://nereidajoyas.uy/assets/images/logo.png"
 
