Se corrigen redirecciones de links

--- a/_data/empresa.yml
+++ b/_data/empresa.yml
@@ -19,6 +19,6 @@ horarios:
 
 redes_sociales:
   whatsapp: "https://wa.me/598XXXXXXXXX"
-  instagram: "https://instagram.com/nereidajoyas"
-  facebook: "https://facebook.com/nereidajoyas"
+  instagram: "https://www.instagram.com/nereidajoyas/"
+  facebook: "https://www.facebook.com/nereidajoyas"
 
